src/objects/Case/fields/AcceleratedRepair__c.field-meta.xml
<CustomField>
    <fullName>AcceleratedRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AcceleratedRepair</label>
    <type>Checkbox</type>
</CustomField>