src/objects/Case/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account.Account_Adress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>