src/objects/Case/fields/Account_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Fax_Number__c</fullName>
    <label>Account Fax Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>