src/objects/Case/fields/Account_Name_web__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_web__c</fullName>
    <label>Account Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>