src/objects/Case/fields/Account_Number_web__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_web__c</fullName>
    <label>CRM ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>