src/objects/Case/fields/Activate_ACT__c.field-meta.xml
<CustomField>
    <fullName>Activate_ACT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate ACT</label>
    <type>Checkbox</type>
</CustomField>