src/objects/Case/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>