src/objects/Case/fields/Additional_Web_Form_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Web_Form_Info__c</fullName>
    <label>Additional Web Form Info</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>