src/objects/Case/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Street Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>