src/objects/Case/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Street Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>