src/objects/Case/fields/Age_Custom_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_Custom_in_Hours__c</fullName>
    <formula>if (DATEVALUE(CreatedDate)&lt;DATE(2016,5,22), Age_Custom__c /60, if(ISBLANK(Propose_to_Close_Time__c),if(CONTAINS( ContactId ,&apos;0031B00002YmYIQ&apos;),1,24*(ClosedDate- CreatedDate)),24*(Propose_to_Close_Time__c-CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Custom in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>