src/objects/Case/fields/Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Hours__c</fullName>
    <description>07/23/2018 : Age in hours modified to reflect the actual age of Case from the Created Date.</description>
    <formula>IF(IsClosed, (ClosedDate - CreatedDate)*24, (now()- CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>