src/objects/Case/fields/Agent_Contact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for the ticket :321116.....This is to send separate acknowledgment email for cases created from email on behalf of the contact agent mapping functionality</description>
    <label>Agent Contact Flag</label>
    <type>Checkbox</type>
</CustomField>