src/objects/Case/fields/AgeOfCurrentHoldInHours__c.field-meta.xml
<CustomField>
    <fullName>AgeOfCurrentHoldInHours__c</fullName>
    <formula>if (CONTAINS(text(Status), &apos;On Hold&apos;),(now()- Time_of_this_Hold__c) * 24, if (CONTAINS(text(Status), &apos;Propose to Close&apos;),(now()- Propose_to_Close_Time__c) * 24,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Current Hold In Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>