src/objects/Case/fields/Aircraft_Location__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Location__c</fullName>
    <label>Aircraft Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>