src/objects/Case/fields/Aircraft_Name__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Name</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>