src/objects/Case/fields/Aircraft_Owner_Operator__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Owner_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Owner/Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Aircraft Owner/Operator)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>