src/objects/Case/fields/Aircraft_Tail_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Tail_Number__c</fullName>
    <label>Aircraft Tail Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>