src/objects/Case/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Platform must be an active platform.</errorMessage>
        <filterItems>
            <field>Platform__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>API DATA LOAD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>