src/objects/Case/fields/Aircraft_Type_Model__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type_Model__c</fullName>
    <label>Aircraft Type / Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>