src/objects/Case/fields/Amount_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Claim__c</fullName>
    <label>Amount of Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>