src/objects/Case/fields/Amount_of_Material_Claim_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Material_Claim_USD__c</fullName>
    <description>Added for ADE Project</description>
    <label>Amount of Material Claim (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>