src/objects/Case/fields/AOG__c.field-meta.xml
<CustomField>
    <fullName>AOG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOG</label>
    <type>Checkbox</type>
</CustomField>