src/objects/Case/fields/AOG_OTTR_Miss_Detail__c.field-meta.xml
<CustomField>
    <fullName>AOG_OTTR_Miss_Detail__c</fullName>
    <description>Field created for Certido Ticket# 311052</description>
    <label>AOG OTTR Miss Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AOG_OTTR_Miss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Missing Customer Info</fullName>
            </value>
            <value>
                <fullName>Delay in Customer Response</fullName>
            </value>
            <value>
                <fullName>CSR Processing Delay</fullName>
            </value>
            <value>
                <fullName>Site Execution Delay</fullName>
            </value>
            <value>
                <fullName>Technical Hold</fullName>
            </value>
            <value>
                <fullName>Quality Hold</fullName>
            </value>
            <value>
                <fullName>Pricing/Part Master</fullName>
            </value>
            <value>
                <fullName>Export Controlled</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Obsolescence</fullName>
            </value>
            <value>
                <fullName>Business Hold</fullName>
            </value>
            <value>
                <fullName>FPAD/PMA</fullName>
            </value>
            <value>
                <fullName>WOR (SPEX)</fullName>
            </value>
            <value>
                <fullName>No Stock (New Part)</fullName>
            </value>
            <value>
                <fullName>No Stock (Repair Part)</fullName>
            </value>
            <value>
                <fullName>Allocation Denied</fullName>
            </value>
            <value>
                <fullName>System Outage</fullName>
            </value>
            <value>
                <fullName>Shipping Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>