src/objects/Case/fields/AOG_OTTR_Miss_Reason__c.field-meta.xml
<CustomField>
    <fullName>AOG_OTTR_Miss_Reason__c</fullName>
    <description>Field created for Certido Ticket# 311052</description>
    <label>AOG OTTR Miss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>Material Shortage</fullName>
            </value>
            <value>
                <fullName>System Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>