src/objects/Case/fields/AOG_Service_level__c.field-meta.xml
<CustomField>
    <fullName>AOG_Service_level__c</fullName>
    <formula>IF($RecordType.Name == &apos;Technical Issue&apos;, if( DATEVALUE(HON_Commit_Date__c) &gt;TODAY() ,&apos;Green&apos;,&apos;Red&apos; ), 
if( ispickval( X4_Hour_AOG__c ,&apos;4-hour&apos;) &amp;&amp;( now() -CreatedDate &gt;=0.123 ) &amp;&amp; ( now() -CreatedDate &lt;0.166), &apos;Yellow&apos;, 
if( ispickval( X4_Hour_AOG__c ,&apos;4-hour&apos;) &amp;&amp; (now() -CreatedDate &gt;=0.166), &apos;Red&apos;, 
if( ispickval( X4_Hour_AOG__c ,&apos;24-hour&apos;) &amp;&amp; (now() -CreatedDate &gt;=0.75 ) &amp;&amp; (now() -CreatedDate &lt;1), &apos;Yellow&apos;, 
if( ispickval( X4_Hour_AOG__c ,&apos;24-hour&apos;) &amp;&amp; (now() -CreatedDate &gt;=1), &apos;Red&apos;, 
if( ispickval( X4_Hour_AOG__c ,&apos;48-hour&apos;) &amp;&amp; (now() -CreatedDate &gt;=1.5 ) &amp;&amp; (now() -CreatedDate &lt;2), &apos;Yellow&apos;, 
if( ispickval( X4_Hour_AOG__c ,&apos;48-hour&apos;) &amp;&amp; (now() -CreatedDate &gt;=2), &apos;Red&apos;, 
&apos;Green&apos;) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOG Service level</label>
    <type>Text</type>
</CustomField>