src/objects/Case/fields/AOG_Service_Level_Flag__c.field-meta.xml
<CustomField>
    <fullName>AOG_Service_Level_Flag__c</fullName>
    <formula>IMAGE( CASE( AOG_Service_level__c
, &quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;), &quot;AOG Service Level&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOG Service Level Flag</label>
    <type>Text</type>
</CustomField>