src/objects/Case/fields/AOG_Service_level_Value__c.field-meta.xml
<CustomField>
    <fullName>AOG_Service_level_Value__c</fullName>
    <formula>if(AOG_Service_level__c==&apos;Red&apos;,3,
if(AOG_Service_level__c==&apos;Yellow&apos;,2,
if(AOG_Service_level__c==&apos;Green&apos;,1,null
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOG Service level Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>