src/objects/Case/fields/App_Email__c.field-meta.xml
<CustomField>
    <fullName>App_Email__c</fullName>
    <description>Preferred “Confirmation/Reply To” email address for this case record</description>
    <inlineHelpText>Preferred “Confirmation/Reply To” email address for this case record</inlineHelpText>
    <label>App Email</label>
    <type>Email</type>
</CustomField>