src/objects/Case/fields/APU_Workcenter__c.field-meta.xml
<CustomField>
    <fullName>APU_Workcenter__c</fullName>
    <label>APU Workcenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>