src/objects/Case/fields/ATA_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter__c</fullName>
    <label>ATA Chapter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>16 - Ground Support Equipment</fullName>
            </value>
            <value>
                <fullName>21 - Air Conditioning</fullName>
            </value>
            <value>
                <fullName>22 - Auto Flight</fullName>
            </value>
            <value>
                <fullName>23 - Communications</fullName>
            </value>
            <value>
                <fullName>23/34 - Communications/Navigation</fullName>
            </value>
            <value>
                <fullName>24 - Electrical Power</fullName>
            </value>
            <value>
                <fullName>25 - Equipment &amp; Furnishings</fullName>
            </value>
            <value>
                <fullName>26 - Fire Protection</fullName>
            </value>
            <value>
                <fullName>27 - Flight Controls</fullName>
            </value>
            <value>
                <fullName>28 - Fuel</fullName>
            </value>
            <value>
                <fullName>29 - Hydraulic Power</fullName>
            </value>
            <value>
                <fullName>30 - Ice &amp; Rain Protection</fullName>
            </value>
            <value>
                <fullName>31 - Indicating &amp; Recording Systems</fullName>
            </value>
            <value>
                <fullName>32 - Landing Gear</fullName>
            </value>
            <value>
                <fullName>33 - Lights</fullName>
            </value>
            <value>
                <fullName>34 - Navigation</fullName>
            </value>
            <value>
                <fullName>35 - Oxygen</fullName>
            </value>
            <value>
                <fullName>36 - Pneumatic</fullName>
            </value>
            <value>
                <fullName>45 - Central Maintenance System</fullName>
            </value>
            <value>
                <fullName>47 - Nitrogen</fullName>
            </value>
            <value>
                <fullName>49 - Auxilliary Power Unit</fullName>
            </value>
            <value>
                <fullName>72 - Engine</fullName>
            </value>
            <value>
                <fullName>73 - Engine &amp; Fuel Control</fullName>
            </value>
            <value>
                <fullName>75 - Bleed Air</fullName>
            </value>
            <value>
                <fullName>76 - Engine Controls</fullName>
            </value>
            <value>
                <fullName>78 - Exhaust</fullName>
            </value>
            <value>
                <fullName>80 - Starting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>