src/objects/Case/fields/Bailment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Bailment_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bailment Agreement</label>
    <type>Checkbox</type>
</CustomField>