src/objects/Case/fields/Bailment_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Bailment_Expiration_Date__c</fullName>
    <description>Added for &quot;Engine Rentals&quot; Record Type per Certido Ticket# 308087</description>
    <label>Bailment Expiration Date</label>
    <type>Date</type>
</CustomField>