src/objects/Case/fields/BendixKing_Escalation__c.field-meta.xml
<CustomField>
    <fullName>BendixKing_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BendixKing Escalation</label>
    <type>Checkbox</type>
</CustomField>