src/objects/Case/fields/BGA_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>BGA_Dealer_Name__c</fullName>
    <label>BGA Dealer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>