src/objects/Case/fields/Business_Focal__c.field-meta.xml
<CustomField>
    <fullName>Business_Focal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added as per Michelle&apos;s request.</description>
    <label>Business Focal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Business Focal)</relationshipLabel>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>