src/objects/Case/fields/C_PS_Support_Org__c.field-meta.xml
<CustomField>
    <fullName>C_PS_Support_Org__c</fullName>
    <description>C&amp;PS Support Org value from Account used for GCE routing</description>
    <formula>TEXT(Account.C_PS_Support_Org__c)</formula>
    <label>C &amp; PS Support Org</label>
    <type>Text</type>
</CustomField>