src/objects/Case/fields/Cage_Code__c.field-meta.xml
<CustomField>
    <fullName>Cage_Code__c</fullName>
    <description>Cage Code from Web</description>
    <label>Manufacturing Plant Cage Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>