src/objects/Case/fields/CalcFCR__c.field-meta.xml
<CustomField>
    <fullName>CalcFCR__c</fullName>
    <description>Puts a 1 if the Pick List value for FCR is Yes for reports only</description>
    <formula>IF( ISPICKVAL( FCR__c , &quot;Yes&quot;) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalcFCR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>