src/objects/Case/fields/Case_age_test__c.field-meta.xml
<CustomField>
    <fullName>Case_age_test__c</fullName>
    <formula>IF(ISPICKVAL(Status, &apos;open&apos;), (now()-SLA_Flag_Case_age__c)*24, 
IF(ISPICKVAL(Status, &apos;Re-open&apos;), (now()-SLA_Flag_Case_age__c)*24, 
IF(ISPICKVAL(Status, &apos;On Hold&apos;), (now()-SLA_Flag_Case_age__c)*24, 
0.00) ))</formula>
    <label>Case age test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>