src/objects/Case/fields/Case_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity__c</fullName>
    <description>Created this field as per the incident INC000012919749 request.</description>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATS Action</fullName>
                <isActive>false</isActive>
                <label>ATS Action</label>
            </value>
            <value>
                <fullName>CBM</fullName>
                <color>#E27001</color>
                <label>CBM</label>
            </value>
            <value>
                <fullName>CBT Action</fullName>
                <isActive>false</isActive>
                <label>CBT Action</label>
            </value>
            <value>
                <fullName>Contract Admin Action</fullName>
                <isActive>false</isActive>
                <label>Contract Admin Action</label>
            </value>
            <value>
                <fullName>Contract Manager Action</fullName>
                <isActive>false</isActive>
                <label>Contract Manager Action</label>
            </value>
            <value>
                <fullName>CSM/CSPM</fullName>
                <color>#641CCF</color>
                <label>CSM/CSPM</label>
            </value>
            <value>
                <fullName>CSM/CSPM Action</fullName>
                <isActive>false</isActive>
                <label>CSM/CSPM Action</label>
            </value>
            <value>
                <fullName>CSS</fullName>
                <color>#FFFF66</color>
                <label>CSS</label>
            </value>
            <value>
                <fullName>Customer Master Action</fullName>
                <isActive>false</isActive>
                <label>Customer Master Action</label>
            </value>
            <value>
                <fullName>Elite Agent</fullName>
                <isActive>false</isActive>
                <label>Elite Agent</label>
            </value>
            <value>
                <fullName>Engineering Action</fullName>
                <isActive>false</isActive>
                <label>Engineering Action</label>
            </value>
            <value>
                <fullName>Export Action</fullName>
                <isActive>false</isActive>
                <label>Export Action</label>
            </value>
            <value>
                <fullName>FCOE</fullName>
                <color>#3333FF</color>
                <label>FCOE</label>
            </value>
            <value>
                <fullName>Finance Action</fullName>
                <isActive>false</isActive>
                <label>Finance Action</label>
            </value>
            <value>
                <fullName>GSS</fullName>
                <isActive>false</isActive>
                <label>GSS</label>
            </value>
            <value>
                <fullName>Import Action</fullName>
                <isActive>false</isActive>
                <label>Import Action</label>
            </value>
            <value>
                <fullName>ISC Action</fullName>
                <isActive>false</isActive>
                <label>ISC Action</label>
            </value>
            <value>
                <fullName>Level 1</fullName>
                <isActive>false</isActive>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
                <isActive>false</isActive>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>Level 3</fullName>
                <isActive>false</isActive>
                <label>Level 3</label>
            </value>
            <value>
                <fullName>Level 4</fullName>
                <isActive>false</isActive>
                <label>Level 4</label>
            </value>
            <value>
                <fullName>MTO Action</fullName>
                <isActive>false</isActive>
                <label>MTO Action</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <color>#999999</color>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>OMS</fullName>
                <color>#78C953</color>
                <label>OMS</label>
            </value>
            <value>
                <fullName>Pricing Action</fullName>
                <isActive>false</isActive>
                <label>Pricing Action</label>
            </value>
            <value>
                <fullName>Quality Action</fullName>
                <isActive>false</isActive>
                <label>Quality Action</label>
            </value>
            <value>
                <fullName>ROCAPS Action</fullName>
                <isActive>false</isActive>
                <label>ROCAPS Action</label>
            </value>
            <value>
                <fullName>SAP/IT Support Action</fullName>
                <isActive>false</isActive>
                <label>SAP/IT Support Action</label>
            </value>
            <value>
                <fullName>Warranty Action</fullName>
                <isActive>false</isActive>
                <label>Warranty Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>