src/objects/Case/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <description>Priority field to be used by GTO team for metric calculation</description>
    <label>Case Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority 1 – AOG/Urgent/Critical: Closure &lt; 24 hours</fullName>
            </value>
            <value>
                <fullName>Priority 2 – Priority- Customer Requirement: Closure &lt; 48 hours</fullName>
            </value>
            <value>
                <fullName>Priority 3 – Standard: Closure &lt; 7 days</fullName>
                <label>Priority 3 – Standard: &lt; 7 days</label>
            </value>
            <value>
                <fullName>Priority 4 – Complex: Closure 1 week to 30 days</fullName>
                <label>Priority 4 – Complex: 1 week to 30 days</label>
            </value>
            <value>
                <fullName>Priority 5 - Complex Closure 31 to 60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>