src/objects/Case/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <externalId>true</externalId>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>