src/objects/Case/fields/CaseOwnerChanged__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerChanged__c</fullName>
    <label>CSWI Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>